# Q1Libre

./: .gitignore  README.md  pyproject.toml
.claude/skills/q1libre-deploy/: SKILL.md
.claude/skills/q1libre-klipper-patch/: SKILL.md
.claude/skills/q1libre-printer-diag/: SKILL.md
.claude/skills/q1libre-release/: SKILL.md
docs/: firmware-analysis.md  install-guide.md  klipper-diff-report.md  roadmap.md  update-protocol.md
docs/plans/: 2026-03-23-phase1-additional-patches.md  2026-03-23-phase2a-moonraker-upgrade-design.md  2026-03-23-phase2a-moonraker-upgrade.md  2026-03-23-q1libre-design.md  2026-03-23-q1libre-implementation.md  2026-03-24-phase2b-klipper-upgrade-design.md  2026-03-24-phase2b-klipper-upgrade.md  2026-03-24-phase2b-managed-fork-design.md  2026-03-24-qol-patches-design.md  2026-03-24-qol-patches-plan.md  2026-03-25-printopt-design.md  2026-03-25-printopt-implementation.md
overlay/control/: postinst
overlay/etc/logrotate.d/: q1libre
overlay/etc/sudoers.d/: q1libre
overlay/home/mks/: .bashrc  Q1LIBRE_README.txt
overlay/root/: 10-armbian-header
overlay/root/klippy-wheels/: MarkupSafe-1.1.1-cp37-cp37m-manylinux2014_aarch64.whl  (+3 more)
overlay/root/scripts/: debloat.sh  (+1 more)
tests/: test_avahi.py  test_build.py  test_deb.py  test_diff.py  test_extract.py  test_integration.py  test_postinst.py  test_validate.py  test_vendor_moonraker.py
tools/: build.py  deb.py  diff.py  download_python38.py  download_wheels.py  extract.py  fetch_latest.py  find_moonraker_commit.py  migrate_config.py  validate.py  vendor_klipper.py  vendor_moonraker.py  version.py
(+46 files in other folders)
